templates/gitvote_template.yaml
---
# Source: gitvote/charts/postgresql/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql-headless
  labels:
    app: postgresql
    chart: postgresql-8.2.1
    release: "release-name"
    heritage: "Helm"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app: postgresql
    release: "release-name"
---
# Source: gitvote/charts/postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-postgresql
  labels:
    app: postgresql
    chart: postgresql-8.2.1
    release: "release-name"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app: postgresql
    release: "release-name"
    role: master
---
# Source: gitvote/templates/gitvote_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitvote
  labels:
    app.kubernetes.io/component: gitvote
    helm.sh/chart: gitvote-1.1.1
    app.kubernetes.io/name: gitvote
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.1.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: gitvote
    app.kubernetes.io/name: gitvote
    app.kubernetes.io/instance: release-name
---
# Source: gitvote/templates/gitvote_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitvote
  labels:
    app.kubernetes.io/component: gitvote
    helm.sh/chart: gitvote-1.1.1
    app.kubernetes.io/name: gitvote
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.1.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: gitvote
      app.kubernetes.io/name: gitvote
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/component: gitvote
        app.kubernetes.io/name: gitvote
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: gitvote
      containers:
        - name: gitvote
          image: public.ecr.aws/g6m3a0y9/gitvote:v1.1.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: gitvote-config
              mountPath: "/home/gitvote/.config/gitvote"
              readOnly: true
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          resources:
            {}
          command: ['gitvote', '-c', '/home/gitvote/.config/gitvote/gitvote.yml']
      volumes:
        - name: gitvote-config
          secret:
            secretName: gitvote-config
---
# Source: gitvote/charts/postgresql/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-postgresql
  labels:
    app: postgresql
    chart: postgresql-8.2.1
    release: "release-name"
    heritage: "Helm"
spec:
  serviceName: release-name-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: postgresql
      release: "release-name"
      role: master
  template:
    metadata:
      name: release-name-postgresql
      labels:
        app: postgresql
        chart: postgresql-8.2.1
        release: "release-name"
        heritage: "Helm"
        role: master
    spec:      
      securityContext:
        fsGroup: 1001
      containers:
        - name: release-name-postgresql
          image: docker.io/artifacthub/postgres:latest
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -d "gitvote" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "postgres" -d "gitvote" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /data
              subPath: 
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: gitvote/templates/gitvote_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitvote
  labels:
    app.kubernetes.io/component: gitvote
    helm.sh/chart: gitvote-1.1.1
    app.kubernetes.io/name: gitvote
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.1.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: gitvote
      port:
        number: 80
